<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionnaireFragment"
    android:orientation="vertical"
    android:background="@drawable/login_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/questionnaire_complete_reg"
        android:textSize="30sp"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/questionnaire_fragment_ed_name"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/questionnaire_name"
        android:maxLines="1"
        android:inputType="text"
        android:maxLength="255"
        android:textColor="@color/white"/>
    <EditText
        android:id="@+id/questionnaire_fragment_ed_last_name"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:hint="@string/questionnaire_last_name"
        android:maxLines="1"
        android:inputType="text"
        android:maxLength="255"
        android:textColor="@color/white"/>
    <EditText
        android:id="@+id/questionnaire_fragment_ed_birthday"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:hint="@string/questionnaire_birthday"
        android:maxLines="1"
        android:inputType="date"
        android:maxLength="12"
        android:textColor="@color/white"/>
    <EditText
        android:id="@+id/questionnaire_fragment_ed_length"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:hint="@string/questionnaire_length"
        android:maxLines="1"
        android:inputType="numberDecimal"
        android:maxLength="4"
        android:textColor="@color/white"/>
    <Button
        android:id="@+id/questionnaire_fragment_btn_next"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/next"
        android:background="@color/design_default_color_surface"/>
</LinearLayout>