<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMeasurementsFragment"
    android:background="@drawable/login_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/Measurements"
        android:textSize="30sp"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/add_measurements_fragment_ed_weight"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:maxLines="1"
        android:hint="@string/weight"
        android:maxLength="255"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/add_measurements_fragment_btn_accept"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/accept"
        android:background="@color/design_default_color_surface"/>

</LinearLayout>